[package]
name = "wilo"
version = "0.3.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
repository = "https://github.com/prabirshrestha/wilo"
license = "MIT"
description = "Text Editor"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
termwiz = "0.9.0"
